# Stereo-Camera-and-3D-Point-Cloud

./: .gitignore  CMakeLists.txt  LICENSE  README.md
calibration/: calib_param.yml  calibration.mat  save_param.m
include/: camera.h  disparity.h  intrinsics.h  semi_global_matching.h  sgm_types.h  sgm_util.h  stdafx.h  stereo_system.h
src/: camera.cpp  disparity.cpp  intrinsics.cpp  main.cpp  semi_global_matching.cpp  sgm_util.cpp  stdafx.cpp  stereo_system.cpp
